--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-	font-family:Helvetica, Verdana;
+	font-family: 'Helvetica Neue', Helvetica, Verdana, sans-serif;
 	color: #46372d;
 	background-color: #f5f4f0;
 }
